--- a/newRot.html
+++ b/newRot.html
@@ -23,7 +23,7 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Media</a>
+        <a href="gallery.html" class="w3-bar-item w3-button">Media</a>
         <a href="#" class="w3-bar-item w3-button">Board</a>
         <a href="#" class="w3-bar-item w3-button">FAQ</a>
       </div>
@@ -69,7 +69,7 @@ body {font-family: "Lato", sans-serif}
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="about">
     <h2 class="w3-wide">ABOUT US</h2>
     <p class="w3-opacity"><i>We love volunteering</i></p>
-    <p class="w3-justify">Our dear Rotaract Vaasa was born on March 18th of 2015, pretty young,ey? Just like us. But let's rewind a bit and start from What rotaract is in the first place. Rotaract is a service club for young men and women ages 18 to 30 who are dedicated to community and international service. Its membership totals over 184,000 in more than 8,000 clubs worldwide and we are one of the 8,000 registered clubs. Rotaract clubs are self-governing
+    <p class="w3-justify">Our dear Rotaract Vaasa was born on March 18th of 2015, pretty young,ey? Just like us. But let's rewind a bit and start from What rotaract is in the first place. Rotaract is a service club for young men and women aged 18 to 30 who are dedicated to community and international service. Its membership totals over 184,000 in more than 8,000 clubs worldwide and we are one of the 8,000 registered clubs. Rotaract clubs are self-governing
 		and self-supporting and can be either university- or community-based. Individual Rotary clubs sponsor Rotaract clubs and offer guidance and support, making the Rotaract clubs true “partners in service” and key members of the family of Rotary. Hence we have different Finnish Rotarians helping use
 		from district to national level. We are also tight with Rotaract Helsinki and rotaract club bad hersfeld-rotenburg from Germany. </p>
     <div class="w3-row w3-padding-33">
