--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     <div class="w3-quarter">
       <img src="01.jpg" style="width:100%" onclick="onClick(this)" alt="At the club's fair, University of Vaasa">
       <img src="fondis.jpg" style="width:100%" onclick="onClick(this)" alt="Quiet cold outside, Quite heated convo inside">
-      <img src="present.jpg" style="width:100%" onclick="onClick(this)" alt="The Intro. Fun. Interesting.">
+      <img src="present.JPG" style="width:100%" onclick="onClick(this)" alt="The Intro. Fun. Interesting.">
    </div>
     
    <div class="w3-quarter">
@@ -37,7 +37,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     
     <div class="w3-quarter">
-      <img src="fun.jpg" style="width:100%" onclick="onClick(this)" alt="Chillaxation!">
+      <img src="fun.JPG" style="width:100%" onclick="onClick(this)" alt="Chillaxation!">
       <img src="pirates.jpg" style="width:100%" onclick="onClick(this)" alt="Pirates on duty, arrgh!">
       <img src="03.jpg" style="width:100%" onclick="onClick(this)" alt="Executive Director duties. Chocolates. cool peeps.">
     </div>
