--- a/newRot.html
+++ b/newRot.html
@@ -24,7 +24,7 @@ body {font-family: "Lato", sans-serif}
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="gallery.html" class="w3-bar-item w3-button">Media</a>
-        <a href="#" class="w3-bar-item w3-button">Board</a>
+        <a href="board.html" class="w3-bar-item w3-button">Board</a>
         <a href="#" class="w3-bar-item w3-button">FAQ</a>
       </div>
     </div>
@@ -35,9 +35,10 @@ body {font-family: "Lato", sans-serif}
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
   <a href="#about" class="w3-bar-item w3-button w3-padding-large">ABOUT</a>
-  <a href="#activities" class="w3-bar-item w3-button w3-padding-large">ACTIVITIES</a>
+  <a href="gallery.html" class="w3-bar-item w3-button w3-padding-large">MEDIA</a>
   <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large">BOARD</a>
+  <a href="board.html" class="w3-bar-item w3-button w3-padding-large">BOARD</a>
+  
 </div>
 
 <!-- Page content -->
@@ -132,7 +133,7 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-  <!-- Ticket Modal -->
+  <!-- Register Modal -->
   <div id="registerModal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top w3-card-4">
       <header class="w3-container w3-teal w3-center w3-padding-32"> 
@@ -149,8 +150,7 @@ body {font-family: "Lato", sans-serif}
         <input class="w3-input w3-border" type="text" placeholder="+358-xx-xxx-xxxx">
         <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">SUBMIT <i class="fa fa-check"></i></button>
         <button class="w3-button w3-red w3-section" onclick="document.getElementById('registerModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
-        <p class="w3-right">Need <a href="#" class="w3-text-blue">help?</a></p>
-      </div>
+     </div>
     </div>
   </div>
 
