--- a/board.html
+++ b/board.html
@@ -94,7 +94,7 @@
 </div>
 </div>
  <footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
-	<div><a href="newRot.html"><i class="fa fa-home w3-hover-opacity"></i></a>
+	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a>
   </footer>
 
 
