--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
     <div class="w3-quarter">
       <img src="replot.jpg" style="width:100%" onclick="onClick(this)" alt="A fellow Rotaract boy received by Rotaract family!">
-      <img src="cheese.jpg" style="width:100%" onclick="onClick(this)" alt="Cheese. Wine. Chocolares. Grapes.">
+      <img src="cheese.jpg" style="width:100%" onclick="onClick(this)" alt="Cheese. Wine. Chocolates. Grapes.">
       <img src="05.jpg" style="width:100%" onclick="onClick(this)" alt="Diversity. Humanity. Love. Respect.">
     </div>
   </div>
@@ -70,7 +70,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
   </div>
   <footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
-	<div><a href="newRot.html"><i class="fa fa-home w3-hover-opacity"></i></a>
+	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a>
   </footer>
 
 <!-- End page content -->
