working contact form
some editing needed for the php style

--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {font-family: "Lato", sans-serif}
-
-</style>
 <body>
 
  <!-- The Contact Section -->
@@ -21,13 +16,13 @@ body {font-family: "Lato", sans-serif}
         <form method="post" action="new.php">
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="name">
+              <input class="w3-input w3-border" type="text" placeholder="Name" required name="name" name="name">
             </div>
             <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Email" required name="email">
+              <input class="w3-input w3-border" type="email" placeholder="Email" required name="email" name="email">
             </div>
           </div>
-          <textarea class="w3-input w3-border" type="text" rows="5" cols="40" placeholder="I just wanna say .." required name="comment"></textarea>
+          <textarea class="w3-input w3-border" type="text" rows="5" cols="40" placeholder="I just wanna say .." required name="comment" name="comment"></textarea>
           <button class="w3-button w3-black w3-section w3-left" type="submit">SEND</button>
         </form>
 		
