--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <p class="w3-opacity w3-center"><i>Anything in your brain? Drop a message!</i></p>
     <div class=" w3-padding-64 w3-center ">
       <div class="w3-col ">
-        <form method="post" action="new.php">
+        <form method="post" action="contact.php">
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
               <input class="w3-input w3-border" type="text" placeholder="Name" required name="name" name="name">
