--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Rotaract Vaasa</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -13,63 +13,63 @@ body {font-family: "Lato", sans-serif}
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-pink w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT</a>
-    <a href="#activities" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ACTIVITIES</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="gallery.html" class="w3-bar-item w3-button">Media</a>
-        <a href="board.html" class="w3-bar-item w3-button">Board</a>
-        <a href="faq.html" class="w3-bar-item w3-button">FAQ</a>
+<div class="top">
+  <div class="bar pink card">
+    <a class="bar-item button padding-large hide-medium hide-large right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="bar-item button padding-large">HOME</a>
+    <a href="#about" class="bar-item button padding-large hide-small">ABOUT</a>
+    <a href="#activities" class="bar-item button padding-large hide-small">ACTIVITIES</a>
+    <a href="contact.html" class="bar-item button padding-large hide-small">CONTACT</a>
+    <div class="dropdown-hover hide-small">
+      <button class="padding-large button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
+      <div class="dropdown-content bar-block card-4">
+        <a href="gallery.html" class="bar-item button">Media</a>
+        <a href="board.html" class="bar-item button">Board</a>
+        <a href="faq.html" class="bar-item button">FAQ</a>
       </div>
     </div>
    </div>
 </div>
 
 <!-- Navbar on small screens -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="gallery.html" class="w3-bar-item w3-button w3-padding-large">MEDIA</a>
-  <a href="contact.html" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-  <a href="board.html" class="w3-bar-item w3-button w3-padding-large">BOARD</a>
-  <a href="faq.html" class="w3-bar-item w3-button w3-padding-large">FAQ</a>
+<div id="navDemo" class="bar-block black hide hide-large hide-medium top" style="margin-top:46px">
+  <a href="gallery.html" class="bar-item button padding-large">MEDIA</a>
+  <a href="contact.html" class="bar-item button padding-large">CONTACT</a>
+  <a href="board.html" class="bar-item button padding-large">BOARD</a>
+  <a href="faq.html" class="bar-item button padding-large">FAQ</a>
   
 </div>
 
 <!-- Page content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px">
+<div class="content" style="max-width:2000px;margin-top:46px">
 
   <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides display-container center">
     <img src="first.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small"> 
+    <div class="display-bottommiddle container text-white padding-32 hide-small"> 
     </div>
   </div>
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides display-container center">
     <img src="replot.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">  
+    <div class="display-bottommiddle container text-white padding-32 hide-small">  
     </div>
   </div>
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides display-container center">
     <img src="fondis.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small"> 
+    <div class="display-bottommiddle container text-white padding-32 hide-small"> 
     </div>
   </div>
-  <div class="mySlides w3-display-container w3-center">
+  <div class="mySlides display-container center">
     <img src="keepCalm.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small"> 
+    <div class="display-bottommiddle container text-white padding-32 hide-small"> 
     </div>
   </div>
 
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="about">
-    <h2 class="w3-wide">ABOUT US</h2>
-    <p class="w3-opacity"><i>We love volunteering</i></p>
-    <p class="w3-justify">Our dear Rotaract Vaasa was born on March 18th of 2015, pretty young,ey? Just like us. But let's rewind a bit and start from What rotaract is in the first place. Rotaract is a service club for young men and women aged 18 to 30 who are dedicated to community and international service. Its membership totals over 184,000 in more than 8,000 clubs worldwide and we are one of the 8,000 registered clubs. Rotaract clubs are self-governing
+  <!-- The About Section -->
+  <div class="container content center padding-64" style="max-width:800px" id="about">
+    <h2 class="wide">ABOUT US</h2>
+    <p class="opacity"><i>We love volunteering</i></p>
+    <p class="justify">Our dear Rotaract Vaasa was born on March 18th of 2015, pretty young,ey? Just like us. But let's rewind a bit and start from What rotaract is in the first place. Rotaract is a service club for young men and women aged 18 to 30 who are dedicated to community and international service. Its membership totals over 184,000 in more than 8,000 clubs worldwide and we are one of the 8,000 registered clubs. Rotaract clubs are self-governing
 		and self-supporting and can be either university- or community-based. Individual Rotary clubs sponsor Rotaract clubs and offer guidance and support, making the Rotaract clubs true “partners in service” and key members of the family of Rotary. Hence we have different Finnish Rotarians helping use
 		from district to national level. We are also tight with Rotaract Helsinki and rotaract club bad hersfeld-rotenburg from Germany. </p>
     <div class="w3-row w3-padding-33">
@@ -88,44 +88,44 @@ body {font-family: "Lato", sans-serif}
     </div>
   </div>
 
-  <!-- The Tour Section -->
-  <div class="w3-black" id="activities">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">IMPORTANT DATES</h2>
-      <p class="w3-opacity w3-center"><i>Register 3 days before event so we can plan, Kiitos!</i></p><br>
+  <!-- The event Section -->
+  <div class="black" id="activities">
+    <div class="container content padding-64" style="max-width:800px">
+      <h2 class="wide center">IMPORTANT DATES</h2>
+      <p class="opacity center"><i>Register 3 days before event so we can plan, Kiitos!</i></p><br>
 
       <ul class="w3-ul w3-border w3-white w3-text-grey">
-        <li class="w3-padding">March <span class="w3-badge w3-right w3-margin-left">7</span></li>
-        <li class="w3-padding">April <span class="w3-badge w3-right w3-margin-left">5</span></li>
-        <li class="w3-padding">May<span class="w3-badge w3-right w3-margin-right">3</span></li>
+        <li class="w3-padding">March <span class="w3-badge right w3-margin-left">7</span></li>
+        <li class="w3-padding">April <span class="w3-badge right w3-margin-left">5</span></li>
+        <li class="w3-padding">May<span class="w3-badge right w3-margin-right">3</span></li>
       </ul>
 
-      <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-row-padding padding-32" style="margin:0 -16px">
         <div class="w3-third w3-margin-bottom">
           <img src="Euros.jpg" alt="cash" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
+          <div class="container w3-white">
             <p><b>Fund Raising</b></p>
-            <p class="w3-opacity">March 2018</p>
+            <p class="opacity">March 2018</p>
             <p>Let's raise some cash to actualize our future projects</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('registerModal').style.display='block'">Register</button>
+            <button class="button black w3-margin-bottom" onclick="document.getElementById('registerModal').style.display='block'">Register</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="ref.jpg" alt="ref" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
+          <div class="container w3-white">
             <p><b>Aiding Refugees</b></p>
-            <p class="w3-opacity">April 2018</p>
+            <p class="opacity">April 2018</p>
             <p>Want to give a helping hand? Teach them some important Finnish phrases perhaps?</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('registerModal').style.display='block'">Register</button>
+            <button class="button black w3-margin-bottom" onclick="document.getElementById('registerModal').style.display='block'">Register</button>
           </div>
         </div>
         <div class="w3-third w3-margin-bottom">
           <img src="kids.jpg" alt="kids" style="width:100%" class="w3-hover-opacity">
-          <div class="w3-container w3-white">
+          <div class="container w3-white">
             <p><b>Visiting kids in hospital</b></p>
-            <p class="w3-opacity">May 2018</p>
+            <p class="opacity">May 2018</p>
             <p>Dress up like Spider-man and Iron-man to bring a smile?Hell yeah!</p>
-            <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('registerModal').style.display='block'">Register</button>
+            <button class="button black w3-margin-bottom" onclick="document.getElementById('registerModal').style.display='block'">Register</button>
           </div>
         </div>
       </div>
@@ -134,21 +134,23 @@ body {font-family: "Lato", sans-serif}
 
   <!-- Register Modal -->
   <div id="registerModal" class="w3-modal">
-    <div class="w3-modal-content w3-animate-top w3-card-4">
-      <header class="w3-container w3-teal w3-center w3-padding-32"> 
+    <div class="w3-modal-content w3-animate-top card-4">
+      <header class="container w3-teal center padding-32"> 
         <span onclick="document.getElementById('registerModal').style.display='none'" 
-       class="w3-button w3-teal w3-xlarge w3-display-topright">×</span>
-        <h2 class="w3-wide"><i class="fa fa-user-plus w3-margin-right"></i>Register here</h2>
+       class="button w3-teal w3-xlarge w3-display-topright">×</span>
+        <h2 class="wide"><i class="fa fa-user-plus w3-margin-right"></i>Register here</h2>
       </header>
-      <div class="w3-container">
+      <div class="container">
+	  <form method="post" action="form.php">
         <p><label><i class="fa fa-vcard"></i> Your Full Name</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="FirstName LastName">
+        <input class="w3-input w3-border" type="text" placeholder="FirstName LastName" name="name">
         <p><label><i class="fa fa-envelope-o"></i> Email</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="you@xmail.com">
+        <input class="w3-input w3-border" type="email" placeholder="you@xmail.com" name="email">
 		<p><label><i class="fa fa-mobile"></i> Phone</label></p>
-        <input class="w3-input w3-border" type="text" placeholder="+358-xx-xxx-xxxx">
-        <button class="w3-button w3-block w3-teal w3-padding-16 w3-section w3-right">SUBMIT <i class="fa fa-check"></i></button>
-        <button class="w3-button w3-red w3-section" onclick="document.getElementById('registerModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
+        <input class="w3-input w3-border" type="text" placeholder="+358-xx-xxx-xxxx" name="phone">
+        <button class="button w3-block w3-teal w3-padding-16 w3-section right" type="submit">SUBMIT <i class="fa fa-check"></i></button>
+      </form>
+		<button class="button w3-red w3-section" onclick="document.getElementById('registerModal').style.display='none'">Close <i class="fa fa-remove"></i></button>
      </div>
     </div>
   </div>
@@ -160,7 +162,7 @@ body {font-family: "Lato", sans-serif}
 
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+<footer class="container padding-64 center opacity w3-light-grey w3-xlarge">
 	Let's stay connected!<br>
   <a href="https://www.facebook.com/rotaractvaasa/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <a href="https://www.instagram.com/rotaractvaasa/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
