final changes before launch
meta data added for SEO, style added from w3

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <title>Rotaract Vaasa</title>
 <meta charset="UTF-8">
+<meta name="description" content="Rotaract Vaasa">
+<meta name="keywords" content="Rotaract,Vaasa,charity,youth, organization,fun,activity,pohjanmaa">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
@@ -72,7 +74,7 @@ body {font-family: "Lato", sans-serif}
     <p class="justify">Our dear Rotaract Vaasa was born on March 18th of 2015, pretty young,ey? Just like us. But let's rewind a bit and start from What rotaract is in the first place. Rotaract is a service club for young men and women aged 18 to 30 who are dedicated to community and international service. Its membership totals over 184,000 in more than 8,000 clubs worldwide and we are one of the 8,000 registered clubs. Rotaract clubs are self-governing
 		and self-supporting and can be either university- or community-based. Individual Rotary clubs sponsor Rotaract clubs and offer guidance and support, making the Rotaract clubs true “partners in service” and key members of the family of Rotary. Hence we have different Finnish Rotarians helping use
 		from district to national level. We are also tight with Rotaract Helsinki and rotaract club bad hersfeld-rotenburg from Germany. </p>
-    <div class="w3-row w3-padding-33">
+    <div class="row w3-padding-33">
       <div class="w3-third">
         <img src="03.jpg" class="w3-round w3-margin-bottom" alt="uva" style="width:60%">
 		<p>At Vaasa university introducing our club to new and old students</p>
