--- a/board.html
+++ b/board.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>Board</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,7 +47,7 @@
 <div class="w3-row"><br>
 
 <div class="w3-quarter container">
-  <img src="jonna oja.jpg" alt="Boss" style="width:110%" class="w3-circle w3-hover-opacity">
+  <img src="jonna_oja.jpg" alt="Boss" style="width:110%" class="w3-circle w3-hover-opacity">
   <div class="middle">
     <div class="text">Jonna is a bright Masters graduate from Vaasa University and currently working in ABB</div>
   </div>
@@ -70,7 +70,7 @@
     <div class="text">Gracien is our other Masters graduate from Uni of Vaasa. He's our entertainer as well.</div>
   </div>
   <h3>Gracien Rubaduka</h3>
-  <p>The real Boss</p>
+  <p>Secretary</p>
 </div>
 
 <div class="w3-quarter container">
@@ -94,7 +94,7 @@
 </div>
 </div>
  <footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
-	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a>
+	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a></div>
   </footer>
 
 
