--- a/contact.html
+++ b/contact.html
@@ -16,17 +16,18 @@
         <form method="post" action="contact.php">
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
-              <input class="w3-input w3-border" type="text" placeholder="Name" required name="name" name="name">
+              <input class="w3-input w3-border" type="text" placeholder="Name" required name="name">
             </div>
             <div class="w3-half">
-              <input class="w3-input w3-border" type="email" placeholder="Email" required name="email" name="email">
+              <input class="w3-input w3-border" type="email" placeholder="Email" required name="email">
             </div>
           </div>
-          <textarea class="w3-input w3-border" type="text" rows="5" cols="40" placeholder="I just wanna say .." required name="comment" name="comment"></textarea>
+          <textarea class="w3-input w3-border" rows="5" cols="40" placeholder="I just wanna say .." required name="comment"></textarea>
           <button class="w3-button w3-black w3-section w3-left" type="submit">SEND</button>
         </form>
 		
-	 </div><div w3-padding-64><h2 class="w3-wide w3-center  ">YOU CAN ALSO REACH OUT </h2></div>
+	 </div>
+	 <div class="w3-padding-64"><h2 class="w3-wide w3-center  ">YOU CAN ALSO REACH OUT </h2></div>
 	</div>
 	
 	<div class="w3-col w3-left  w3-large w3-margin-bottom ">
@@ -36,7 +37,7 @@
     </div>
   </div>
    <footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
-	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a>
+	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a></div>
   </footer>
 </body>
 </html>
