--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>FAQ</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -68,7 +68,7 @@
 
 	<p class="w3-center">Your question is not listed?Leave us a message <a href="contact.html">here</a> then! :)<p>
 	<footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
-	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a>
+	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a></div>
   </footer>
   <script>
 		var acc = document.getElementsByClassName("accordion");
