--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>MEDIA</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -69,13 +69,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <p id="caption"></p>
     </div>
   </div>
-  <footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
-	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a>
-  </footer>
-
-<!-- End page content -->
 </div>
 
+<!-- End page content -->
+<footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge">
+	<div><a href="index.html"><i class="fa fa-home w3-hover-opacity"></i></a></div>
+  </footer>
+  
 <script>
 // Modal Image Gallery
 function onClick(element) {
