--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <title>Rotaract Vaasa</title>
 <meta charset="UTF-8">
 <meta name="description" content="Rotaract Vaasa">
@@ -47,22 +47,22 @@ body {font-family: "Lato", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides display-container center">
-    <img src="first.jpg" style="width:100%">
+    <img alt="first one" src="first.jpg" style="width:100%">
     <div class="display-bottommiddle container text-white padding-32 hide-small"> 
     </div>
   </div>
   <div class="mySlides display-container center">
-    <img src="replot.jpg" style="width:100%">
+    <img alt="bridges and friends" src="replot.jpg" style="width:100%">
     <div class="display-bottommiddle container text-white padding-32 hide-small">  
     </div>
   </div>
   <div class="mySlides display-container center">
-    <img src="fondis.jpg" style="width:100%">
+    <img alt="happy place" src="fondis.jpg" style="width:100%">
     <div class="display-bottommiddle container text-white padding-32 hide-small"> 
     </div>
   </div>
   <div class="mySlides display-container center">
-    <img src="keepCalm.jpg" style="width:100%">
+    <img alt="our motto" src="keepCalm.jpg" style="width:100%">
     <div class="display-bottommiddle container text-white padding-32 hide-small"> 
     </div>
   </div>
@@ -138,8 +138,7 @@ body {font-family: "Lato", sans-serif}
   <div id="registerModal" class="w3-modal">
     <div class="w3-modal-content w3-animate-top card-4">
       <header class="container w3-teal center padding-32"> 
-        <span onclick="document.getElementById('registerModal').style.display='none'" 
-       class="button w3-teal w3-xlarge w3-display-topright">×</span>
+        <span onclick="document.getElementById('registerModal').style.display='none'" class="button w3-teal w3-xlarge w3-display-topright">×</span>
         <h2 class="wide"><i class="fa fa-user-plus w3-margin-right"></i>Register here</h2>
       </header>
       <div class="container">
