--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>Rotaract Vaasa</title>
 <meta charset="UTF-8">
-<meta name="description" content="Rotaract Vaasa">
+<meta name="description" content="Rotaract Vaasa is a young not for profit youth led organization here to help the community. We engage the youth with different world issues that can be solved just by giving our time for the betterment of Vaasa and the world in general.">
 <meta name="keywords" content="Rotaract,Vaasa,charity,youth, organization,fun,activity,pohjanmaa">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
